# CleanShare

./: .gitignore  BLUR_SELECTION_IMPLEMENTATION.md  CMakeLists.txt  CleanShareInstaller.iss  MainWindow.h  README.md  SessionController.cpp  appicon.rc
.qtcreator/: CMakeLists.txt.user.7c5db12
Documentation/RAD/: main.tex
assets/icons/: Logo.qrc
build-mingw-fresh/: Makefile  cmake_install.cmake
build-mingw-fresh/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-mingw-fresh/src/: Makefile  cmake_install.cmake
build-mingw-fresh/src/cleanshare_app_autogen/: deps  moc_predefs.h
build-mingw-fresh/src/cleanshare_app_autogen/CR7HSH4WKP/: qrc_Logo.cpp
build-mingw-fresh/src/cleanshare_app_autogen/YCDLW3T4OG/: qrc_Logo.cpp
build-mingw-fresh/src/core/: Makefile  cmake_install.cmake
build-mingw-fresh/src/core/cleanshare_core_autogen/: deps
build-mingw-fresh/src/presentation/: Makefile  cmake_install.cmake
build-mingw-fresh/src/presentation/cleanshare_presentation_autogen/: deps  mocs_compilation.cpp
build-mingw-fresh/src/presentation/cleanshare_presentation_autogen/6YEA5652QU/: moc_ImageCanvas.cpp  moc_ImageCanvas.cpp.d  moc_ImagePreviewWidget.cpp  moc_ImagePreviewWidget.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d
build-mingw-fresh/tests/: Makefile  cmake_install.cmake
docs/Project Proposal/: main.tex
docs/SDD/: main.tex
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  SessionController.cpp  SessionController.h
src/core/include/: SessionController.h
src/core/src/: SessionController.cpp
src/detection/: DetectionEngineStub.cpp
src/presentation/: CMakeLists.txt
src/presentation/include/: ImageCanvas.h  ImagePreviewWidget.h  MainWindow.h
src/presentation/src/: ImageCanvas.cpp  ImagePreviewWidget.cpp  MainWindow.cpp
src/python/: liquor_detect.py
